--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,1 +1,42 @@
- 
+<!DOCTYPE html>
+<html lang="cs">
+<head>
+    <meta content="text/xhtml; charset=UTF-8" http-equiv="Content-Type">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/less.js/1.6.3/less.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+</head>
+<body>
+<div class="transparent-light">
+    <div class="background-image" />
+    <div class="box-control">
+        <table class="box-table" align="center">
+            <tbody>
+            <tr class="box box-effects">
+                <td class="box-content-label green">A</td>
+                <td class="box-content">Lehká obtížnost znalostního testu. Obrázkový kvíz s výběrem z více možností a textovou nápovědou.</td>
+            </tr>
+            <tr><th></th></tr>
+            <tr class="box box-effects">
+                <td class="box-content-label gold">B</td>
+                <td class="box-content">Střední obtížnost znalostního testu. Poznávání správného druhu z fotografií ptactva s textovou nápovědou..</td>
+            </tr>
+            <tr><th></th></tr>
+            <tr class="box box-effects">
+                <td class="box-content-label red">C</td>
+                <td class="box-content">Obrázkový kvíz s výběrem z více možností a textovou nápovědou. Střední obtížnost znalostního testu.</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+<!--<div class="login-content">
+    <div class="login">
+        <h1>Přihlášení</h1>
+        <input type="text" placeholder="Jméno"/>
+        <input type="text" placeholder="E-mail" />
+        <input type="submit" value="Přihlásit" />
+    </div>
+</div>-->
+</body>
+<html>
