#1 Připravit statické šablony
  - opravena šablona výběru obtížnosti

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -13,30 +13,33 @@
         <table class="box-table" align="center">
             <tbody>
             <tr class="box box-effects">
-                <td class="box-content-label green">A</td>
+                <td class="box-content-name">Lehká</td>
                 <td class="box-content">Lehká obtížnost znalostního testu. Obrázkový kvíz s výběrem z více možností a textovou nápovědou.</td>
+                <td class="box-content-label green" />
             </tr>
             <tr><th></th></tr>
             <tr class="box box-effects">
-                <td class="box-content-label gold">B</td>
+                <td class="box-content-name">Střední</td>
                 <td class="box-content">Střední obtížnost znalostního testu. Poznávání správného druhu z fotografií ptactva s textovou nápovědou..</td>
+                <td class="box-content-label gold" />
             </tr>
             <tr><th></th></tr>
             <tr class="box box-effects">
-                <td class="box-content-label red">C</td>
+                <td class="box-content-name">Těžká</td>
                 <td class="box-content">Obrázkový kvíz s výběrem z více možností a textovou nápovědou. Střední obtížnost znalostního testu.</td>
+                <td class="box-content-label red" />
             </tr>
             </tbody>
         </table>
     </div>
 </div>
-<!--<div class="login-content">
+<div class="login-content">
     <div class="login">
-        <h1>Přihlášení</h1>
+        <div><h1>Přihlášení</h1></div>
         <input type="text" placeholder="Jméno"/>
         <input type="text" placeholder="E-mail" />
         <input type="submit" value="Přihlásit" />
     </div>
-</div>-->
+</div>
 </body>
 <html>
