--- a/www/css/style.less
+++ b/www/css/style.less
@@ -196,7 +196,7 @@ h1 {
 .progress {
   background: @progress-bar-color;
   height: 100%;
-  width: 75%;
+  width: 0%;
 }
 
 .progress-label {
@@ -353,5 +353,18 @@ h1 {
 }
 
 .red {
-  background: @gold;
+  background: @red;
+}
+
+.question {
+  display: inline-block;
+}
+
+.question img {
+  max-width: 400px;
+  max-height: 300px;
+}
+
+.submit {
+  display: none;
 }
