--- a/app/presenters/templates/@layout.latte
+++ b/app/presenters/templates/@layout.latte
@@ -7,17 +7,24 @@
     <link rel="stylesheet" type="text/css" href="{$basePath}/css/style.css">
     <script src="http://cdnjs.cloudflare.com/ajax/libs/less.js/1.6.3/less.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="{$basePath}/js/nette.ajax.js"></script>
+    <script src="{$basePath}/js/main.js"></script>
 
 	<title>{ifset title}{include title|stripHtml} | {/ifset}Nette Web</title>
 </head>
 
 <body>
 	<div n:foreach="$flashes as $flash" n:class="flash, $flash->type">{$flash->message}</div>
+	<script>
+        $(function () {
+            $.nette.init();
+        });
+    </script>
 
 	{include content}
 
 	{block scripts}
-	<script src="https://nette.github.io/resources/js/netteForms.min.js"></script>
+	    <script src="https://nette.github.io/resources/js/netteForms.min.js"></script>
 	{/block}
 </body>
 </html>
