--- a/www/css/style.less
+++ b/www/css/style.less
@@ -36,7 +36,7 @@ body, html {
 }
 
 .background-image {
-  background-image: url("../birds/datel-cerny.jpg");
+  background-image: url("../images/birds/datel-cerny.jpg");
   background-size: cover;
   width: 100%;
   height: 100%;
@@ -51,12 +51,25 @@ h1 {
 /* --- CONTENT --- */
 /*******************/
 
+.question {
+  display: block;
+}
+
+.test-content {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background-image: url('../images/question-background.jpg');
+}
+
 .content {
-  position: relative;
+  position: absolute;
+  top:0;
+  width: 100%;
   height: 55%;
   min-height: 150px;
   text-align: center;
-  background: @control-light-color;
+  //background: @control-light-color;
   .border(0,0,1px);
 }
 
@@ -75,9 +88,12 @@ h1 {
 /********************/
 
 .controls {
+  position: absolute;
   width: 100%;
+  top:55%;
   height: 45%;
   min-height: 145px;
+  background: @control-light-color;
   vertical-align: middle;
 }
 
@@ -354,15 +370,6 @@ h1 {
 
 .red {
   background: @red;
-}
-
-.question {
-  display: inline-block;
-}
-
-.question img {
-  max-width: 400px;
-  max-height: 300px;
 }
 
 .submit {
